--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,173 @@
-appnope==0.1.3
+aiohttp==3.9.5
+aiosignal==1.3.1
+aniso8601==9.0.1
+annotated-types==0.7.0
+anyio==4.4.0
+apispec==6.4.0
+apispec-webframeworks==1.0.0
+arrow==1.3.0
 asttokens==2.4.1
-comm==0.2.0
-debugpy==1.8.0
+attrs==23.2.0
+Automat==24.8.1
+beautifulsoup4==4.12.3
+bidict==0.23.1
+binaryornot==0.4.4
+blinker==1.8.2
+boto3==1.34.34
+botocore==1.34.162
+certifi==2024.7.4
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+coloredlogs==15.0.1
+constantly==23.10.4
+cookiecutter==2.5.0
+dataclasses-json==0.6.7
+datasets==2.21.0
+decorator==5.1.1
+deepdiff==6.7.1
+Deprecated==1.2.14
+dill==0.3.8
+dirtyjson==1.0.8
+distro==1.9.0
+dnspython==2.6.1
+et-xmlfile==1.1.0
 executing==2.0.1
-ipykernel==6.26.0
-ipython==8.17.2
+filelock==3.15.4
+Flask==3.0.2
+Flask-Cors==4.0.0
+Flask-RESTful==0.3.10
+Flask-SocketIO==5.3.6
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.6.1
+gevent==23.9.1
+gevent-websocket==0.10.1
+gitignore_parser==0.1.11
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.24.5
+humanfriendly==10.0
+hyperlink==21.0.0
+idna==3.7
+incremental==24.7.2
+ipython==8.26.0
+itsdangerous==2.2.0
 jedi==0.19.1
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.8
-packaging==23.2
-parso==0.8.3
-pexpect==4.8.0
-platformdirs==4.0.0
-prompt-toolkit==3.0.41
-psutil==5.9.6
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
+kthread==0.2.3
+llama-cloud==0.0.11
+llama-index==0.10.58
+llama-index-agent-openai==0.2.9
+llama-index-cli==0.1.13
+llama-index-core==0.10.58
+llama-index-embeddings-huggingface==0.1.5
+llama-index-embeddings-huggingface-optimum==0.1.5
+llama-index-embeddings-openai==0.1.11
+llama-index-experimental==0.1.3
+llama-index-indices-managed-llama-cloud==0.2.7
+llama-index-legacy==0.9.48
+llama-index-llms-ollama==0.2.2
+llama-index-llms-openai==0.1.27
+llama-index-multi-modal-llms-openai==0.1.8
+llama-index-program-openai==0.1.7
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.32
+llama-index-readers-llama-parse==0.1.6
+llama-parse==0.4.9
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.20.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+minijinja==2.0.1
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.2.1
+nltk==3.8.1
+numpy==1.26.4
+ollama==0.3.1
+onnx==1.16.2
+onnxruntime==1.19.0
+openai==1.37.1
+openpyxl==3.1.2
+optimum==1.21.4
+ordered-set==4.1.0
+packaging==24.1
+pandas==2.2.0
+parso==0.8.4
+passlib==1.7.4
+pexpect==4.9.0
+pillow==10.4.0
+prompt_toolkit==3.0.47
+protobuf==5.27.3
 ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.17.1
-python-dateutil==2.8.2
-pyzmq==25.1.1
+pure_eval==0.2.3
+pyarrow==15.0.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+pymongo==4.6.1
+pypdf==4.3.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-engineio==4.9.1
+python-slugify==8.0.4
+python-socketio==5.11.3
+pytz==2023.3.post1
+PyYAML==6.0.1
+regex==2024.7.24
+requests==2.32.3
+rich==13.7.1
+s3transfer==0.10.2
+safetensors==0.4.4
+sentencepiece==0.2.0
+setuptools==72.2.0
+simple-websocket==1.0.0
 six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.25
 stack-data==0.6.3
-tornado==6.3.3
-traitlets==5.13.0
-wcwidth==0.2.10
-wheel @ file:///opt/homebrew/Cellar/python%403.12/3.12.3/libexec/wheel-0.43.0-py3-none-any.whl#sha256=80a49545e5e5ef2abeb79ec254447300d41dfb76914fc65efa6da8dd0a766052
+striprtf==0.0.26
+sympy==1.13.2
+taipy==3.1.1
+taipy-config==3.1.1
+taipy-core==3.1.1
+taipy-gui==3.1.4
+taipy-rest==3.1.1
+taipy-templates==3.1.1
+tenacity==8.5.0
+text-unidecode==1.3
+tiktoken==0.7.0
+timm==1.0.8
+tokenizers==0.19.1
+toml==0.10.2
+torch==2.4.0
+torchvision==0.19.0
+tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.43.4
+Twisted==23.10.0
+types-python-dateutil==2.9.0.20240821
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.2
+urllib3==2.2.2
+wcwidth==0.2.13
+Werkzeug==3.0.4
+wrapt==1.16.0
+wsproto==1.2.0
+xxhash==3.5.0
+yarl==1.9.4
+zope.event==5.0
+zope.interface==7.0.1
